# Lucidacta

./: CMakeLists.txt  compile.bat
include/lucidacta/: lucidacta.h
src/: lucid_context.c  lucid_context.h  lucid_experimental.c  lucid_experimental.h  lucid_gui.c  lucid_pipeline.c  lucid_pipeline.h  lucid_renderer.c  lucid_renderer.h  lucid_result.h  lucid_utils.c  lucid_utils.h  lucid_vk_utils.c  lucid_vk_utils.h  lucid_window.c  lucid_window.h
src/debug/: lucid.debugger.h
src/gui/: lucid_gui.h
test/: app.c
